--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: web-app-service
-  namespace: test
+  namespace: appsec
 spec:
   type: NodePort  # ⬅️ ĐỔI từ LoadBalancer sang NodePort
   selector:
